--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>jQuery Mobile Web App</title>
+<title>course project</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="stylesheet" href="themes/my-custom-theme.min.css" />
 <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
@@ -15,7 +15,7 @@
 
 	<div id="page" data-role="page" data-theme="a" data-add-back-btn="true">
 		<div data-role="panel" id="myPanel">
-			<h2>Panel Header</h2>
+			<h2>Choose your fravorite type of food.</h2>
 			<form>
 				<div class="ui-field-contain">
 					<label for="select-native-1">Choose one?</label>
