--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<div id="page" data-role="page" data-theme="a" data-add-back-btn="true">
 		<div data-role="panel" id="myPanel">
-			<h2>Choose your fravorite type of food.</h2>
+			<h2>Choose your favorite type of food.</h2>
 			<form>
 				<div class="ui-field-contain">
 					<label for="select-native-1">Choose one?</label>
